--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,43 @@
 
   <name>freeCrm</name>
   <url>http://maven.apache.org</url>
+  
+  
+  
+  
+  
+  
+  
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+
+
+
+<build>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.21.0</version>
+			<configuration>
+                   <!-- TestNG Suite XML files list for test execution -->
+                   <suiteXmlFiles>
+                       <suiteXmlFile>testng.xml</suiteXmlFile>
+                       
+                   </suiteXmlFiles>
+               </configuration>
+		</plugin>
+	</plugins>
+</build>
+
+
+
+
+
+
 
   <dependencies>
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
